--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 ALL MY DOTFILES
+========================
+
+My dotfiles controlled by GNU Stow following `this way
+<https://farseerfc.me/using-gnu-stow-to-manage-your-dotfiles.html>`_ .
+
+
+Requirements
+-----------------------
+
+These requirements are listed as their package names in Arch Linux::
+
+	zsh-syntax-highlighting
+	grml-zsh-config
