--- a/README
+++ b/README
@@ -1,14 +1,15 @@
 ALL MY DOTFILES
 ========================
 
-My dotfiles controlled by GNU Stow following `this way
-<https://farseerfc.me/using-gnu-stow-to-manage-your-dotfiles.html>`_ .
+My dotfiles controlled by GNU Stow following  [this way](https://farseerfc.me/using-gnu-stow-to-manage-your-dotfiles.html) .
 
 
 Requirements
 -----------------------
 
-These requirements are listed as their package names in Arch Linux::
+These requirements are listed as their package names in Arch Linux
 
-	zsh-syntax-highlighting
-	grml-zsh-config
+```
+zsh-syntax-highlighting
+grml-zsh-config
+```
